# DASH-tree

./: .pre-commit-config.yaml  README.md  environment.yml  min_environment.yml  pyproject.toml  tree_only_env.yml
.github/workflows/: CI.yaml  scheduled.yaml
dev/conda-env/: test_env.yaml
serenityff/charge/gnn/attention_extraction/: explainer.py  extractor.py
serenityff/charge/gnn/training/: trainer.py
serenityff/charge/gnn/utils/: custom_data.py  model.py  rdkit_helper.py  split_utils.py
tests/serenityff/charge/gnn/utils/: test_rdkit_helper.py
